update with info(filter_path="")

--- a/test-ES-connection-2.ipynb
+++ b/test-ES-connection-2.ipynb
@@ -26,9 +26,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9088fb1b-f474-4420-96b6-2e218f2091c6",
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "c4a0727b-1f57-4d17-b79b-6e8da5d803c3",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -qU elasticsearch8"
    ]
@@ -78,10 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 119,
    "id": "fd890b66-e327-4990-8cc8-de9173b514c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'version': {'number': '8.18.0'}}\n"
+     ]
+    }
+   ],
    "source": [
     "from elasticsearch8 import Elasticsearch\n",
     "\n",
@@ -92,8 +110,9 @@
     "    print(\"missing env. variables to connect to elasticsearch\")\n",
     "\n",
     "#  Successful response!\n",
-    "# uncomment next line to have the response of GET /\n",
-    "#print(es.info())\n"
+    "print(es.info(filter_path=\"version.number\"))\n",
+    "# uncomment next line to have the complete response of GET /\n",
+    "#print(es.info())"
    ]
   },
   {
